:poodle: :goat: Finishing swagger documentation
